fixing horizontal scrolling

--- a/index.css
+++ b/index.css
@@ -23,8 +23,8 @@
     background: black !important;
   }
   body.modal-open {
-    margin-right: 0;
-    overflow: hidden;
+    margin-right: 0!important;
+    overflow: hidden !important;
   }
   a {
     color: black;
@@ -56,8 +56,8 @@
       box-shadow: 10px 5px 5px #7a6868;
     }
     .container {
-      margin-left: 15px;
-      margin-right: 15px;
+      margin-left: 15px!important;
+      margin-right: 15px!important;
     }
 
     .image-container img {
@@ -116,7 +116,7 @@
     }
 
     .modal-dialog {
-      width: 1000px;
+      width: 1000px!important;
     }
   }
   .image-container {
@@ -135,8 +135,8 @@
     object-fit: cover;
   }
   .remove-padding {
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 0px!important;
+    padding-right: 0px!important;
   }
   .play-icon {
     position: absolute;
